--- a/_pgbackup/index_1628098089.html
+++ b/_pgbackup/index_1628098089.html
@@ -345,38 +345,45 @@
                     <div class="col-3 col-lg-2 d-none d-sm-inline-block mt-n11"> 
                         <!-- Logo -->                         
                         <div class="avatar avatar-xl avatar-circle bg-white shadow-soft p-4 mx-auto"> 
-                            <img class="avatar-img" src="assets/img/custom/hero/ca.png" alt="Image Description"> 
+                            <img class="avatar-img" src="../../assets/img/160x160/img18.png" alt="Image Description"> 
                         </div>                         
                         <!-- End Logo -->                         
                     </div>                     
                     <div class="col-lg-2 d-none d-lg-inline-block mt-lg-n8"> 
                         <!-- Logo -->                         
                         <div class="bg-white shadow-soft rounded-circle p-6 mx-auto"> 
-                            <img class="avatar-img" src="assets/img/custom/hero/us.png" alt="Image Description" width="160" height="160"> 
+                            <img class="avatar-img" src="../../assets/img/160x160/img17.png" alt="Image Description" width="160" height="160"> 
                         </div>                         
                         <!-- End Logo -->                         
                     </div>                     
                     <div class="col-3 col-lg-2 d-none d-sm-inline-block mt-n4"> 
                         <!-- Logo -->                         
                         <div class="avatar avatar-xl avatar-circle bg-white shadow-soft p-4 mx-auto"> 
-                            <img class="avatar-img" src="assets/img/custom/hero/om.png" alt="Image Description"> 
+                            <img class="avatar-img" src="../../assets/img/160x160/img13.png" alt="Image Description"> 
                         </div>                         
                         <!-- End Logo -->                         
                     </div>                     
                     <div class="col-3 col-lg-2 d-none d-sm-inline-block mt-n7"> 
                         <!-- Logo -->                         
                         <div class="avatar avatar-xl avatar-circle bg-white shadow-soft p-4 mx-auto"> 
-                            <img class="avatar-img" src="assets/img/custom/hero/sa.png" alt="Image Description"> 
+                            <img class="avatar-img" src="../../assets/img/160x160/img14.png" alt="Image Description"> 
                         </div>                         
                         <!-- End Logo -->                         
                     </div>                     
                     <div class="col-lg-2 d-none d-lg-inline-block mt-lg-n11"> 
                         <!-- Logo -->                         
                         <div class="bg-white shadow-soft rounded-circle p-6 mx-auto"> 
-                            <img class="avatar-img" src="assets/img/custom/hero/nz.png" alt="Image Description" width="160" height="160"> 
+                            <img class="avatar-img" src="../../assets/img/160x160/img16.png" alt="Image Description" width="160" height="160"> 
                         </div>                         
                         <!-- End Logo -->                         
-                    </div>                                          
+                    </div>                     
+                    <div class="col-3 col-lg-2 d-none d-sm-inline-block"> 
+                        <!-- Logo -->                         
+                        <div class="avatar avatar-xl avatar-circle bg-white shadow-soft p-4 mx-auto"> 
+                            <img class="avatar-img" src="../../assets/img/160x160/img15.png" alt="Image Description"> 
+                        </div>                         
+                        <!-- End Logo -->                         
+                    </div>                     
                 </div>                 
             </div>             
             <!-- End Clients Section -->
