--- a/index.html
+++ b/index.html
@@ -691,68 +691,6 @@ optimum result.</p>
                 </div>
                 <div id="stickyBlockEndPoint"></div>
             </div>
-            <div class="container-fluid space-2 space-lg-3 px-lg-5">
-                <!-- Title -->
-                <div class="w-md-80 w-lg-50 text-center mx-md-auto mb-5 mb-md-9">
-                    <h2>Why us? - version #2</h2>
-                </div>
-                <!-- End Title -->
-                <!-- Sticky Block End Point -->
-                <div class="border-bottom">
-                    <div class="container space-2">
-                        <div class="container">
-                            <div class="row">
-                                <div class="col-lg-6 mb-3 mb-lg-0">
-                                    <!-- Card -->
-                                    <div class="card bg-primary text-white h-100 overflow-hidden p-5">
-                                        <div class="w-65 pr-2">
-                                            <h2 class="text-white">Wireline cable has four fibre lines</h2>
-                                            <p class="text-white">Our standard wireline cable has six
-electrical lines and four fibre lines
-allowing us to record both Geophone
-data and DAS data using the same cable.
-For DAS recording two of the fibres are
-pulled out at the drum and connected to
-an interrogator. We have worked with a
-variety of vendors that supply the
-interrogator so can easily work with your
-vendor of choice.</p>
-                                            <a class="btn btn-sm btn-light transition-3d-hover" href="#">Find Out More </a>
-                                        </div>
-                                        <div class="position-absolute right-0 bottom-0  mb-n3 mr-n4">
-                                            <img class="img-fluid" width="110" src="assets/img/custom/why_us/4_lines_in_cable.jpg" alt="Image Description">
-                                        </div>
-                                    </div>
-                                    <!-- End Card -->
-                                </div>
-                                <div class="col-lg-6">
-                                    <!-- Card -->
-                                    <div class="card bg-warning text-white h-100 overflow-hidden p-5">
-                                        <div class="w-65 pr-2">
-                                            <h2 class="text-white">Experience Is our strength</h2>
-                                            <p class="text-white">Our field crews have work with RIL since
-the company started 16 years ago. It is
-this retention that enables us to operate
-in a very efficient and safe way. Our staff
-work together to record the optimum
-data and plan for effective and efficient
-acquisition.</p>
-                                            <a class="btn btn-sm btn-light transition-3d-hover" href="#">Find Out More <i class="fas fa-angle-right ml-1"></i></a>
-                                        </div>
-                                        <div class="position-absolute right-0 bottom-0 w-50 mb-n3 mr-n4">
-                                            <img class="img-fluid" src="assets/img/mockups/img12.png" alt="Image Description">
-                                        </div>
-                                    </div>
-                                    <!-- End Card -->
-                                </div>
-                            </div>
-                        </div>
-                        <div class="row">
-</div>
-                    </div>
-                </div>
-                <div id="stickyBlockEndPoint"></div>
-            </div>
             <div class="container space-2 space-lg-3">
                 <div class="row justify-content-lg-between">
                     <div class="col-lg-5 order-lg-2 pl-lg-0">
@@ -769,31 +707,31 @@ wellbore Acquisition</h4>
 high quality downhole data safely ever since. Our years of
 experience globally allows us to consistently acquire the best
 data in the most efficient way.</p>
-                                <h4 class="text-center">Our managment</h4>
+                                <h4>Our managment</h4>
                             </div>
                             <!-- End Title -->
                             <div class="row">
                                 <div class="col-6 mb-3 mb-md-5">
                                     <div class="pr-lg-4">
-                                        <span class="h2 text-primary">Earl Hale</span>
+                                        <span class="h3 text-primary">Earl Hale</span>
                                         <p>President and CEO</p>
                                     </div>
                                 </div>
                                 <div class="col-6 mb-3 mb-md-5">
                                     <div class="pr-lg-4">
-                                        <span class="js-counter h2 text-primary">Richard Pearcy&nbsp;</span>
+                                        <span class="h3 js-counter text-primary">Richard Pearcy&nbsp;</span>
                                         <p>Vice President</p>
                                     </div>
                                 </div>
                                 <div class="col-6">
                                     <div class="pr-lg-4">
-                                        <span class="js-counter h2 text-primary">Alex Leonenko</span>
+                                        <span class="h3 js-counter text-primary">Alex Leonenko</span>
                                         <p>Design Engineer</p>
                                     </div>
                                 </div>
                                 <div class="col-6">
                                     <div class="pr-lg-4">
-                                        <span class="js-counter h2 text-primary">Daniele Resicini</span>
+                                        <span class="h3 js-counter text-primary">Daniele Resicini</span>
                                         <p>Lead Operator</p>
                                     </div>
                                 </div>
